2017-03-14  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Add version to generated container signatures

2017-03-02  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server_common.py: Allow certain states to be ignored in gpg_edit

	* src/server.py: Ignore KEYEXPIRED and SIGEXPIRED so we can unexpire

2017-02-28  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Implement change-key-expiration

	* src/server_common.py: Implement GPG key edit

	* src/bridge.py: Implement change-key-expiration

	* src/client.py: Implement change-key-expiration

	* configure.ac: Release 0.205
	* NEWS: Update.

2017-02-20  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/bind_methods.py: Added option for public-only PKCS11 tokens.

	* src/utils.py: Implement Either-Or binding.

	* configure.ac: Release 0.204
	* NEWS: Update.

	* src/bind_methods.py: Fixed bug with pkcs11 PIN reading.

2017-02-13  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* configure.ac: Release 0.203
	* NEWS: Update.

2016-12-03  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py: Added support for koji krb_login.

	* tests/containers.at: Skip test if we don't have skopeo.

2016-10-03  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/server.py: Added gpg_signature for plain gpg signatures.

	* Server/Bridge/Client: Implemented Container signing, using skopeo
	scheme.

	* tests/bound-passphrase-tpm.at: Added test for TPM binding.

	* configure.ac: Release 0.202
	* NEWS: Update.

2016-10-01  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py (nss_init): Check whether NSS password is correct on
	startup (RHBZ#991154)

	* src/utils.py (nss_init): Remove support for python-nss 0.4 init

2016-09-30  Patrick Uiterwijk  <puiterwijk@redhat.com>

	* src/utils.py (string_is_safe): Add checking for filename safety.

	* src/server.py (cmd_sign_ostree): Verify that ostree-hash is
	filename-safe.

2016-09-27  Patrick Uiterwijk  <puiterwijk@redhat.com>
